Vinay | Fix build. Add more memory to maven test plugin